2007-02-02  Nurdin Premji  <npremji@redhat.com>

	funit-asm.h: Removed spaces after \.

	funit-asm.h: Added some more macros.
	funit-stackframe-asm.S: Added (C). Simplified.
	funit-stackframe-static-asm.S: Ditto.

2007-02-01  Nurdin Premji  <npremji@redhat.com>

	* funit-stacktrace-asm.S: Added.
	* funit-stacktrace-static-asm.S: Added.

2007-01-26  Nurdin Premji  <npremji@redhat.com>

	* funit-stacktrace-static.c: Added.
	* funit-stacktrace.c: Cleaned up, removed unnecessary hello world statement.

2007-01-25  Nurdin Premji  <npremji@redhat.com>

	* funit-stacktrace.c: Added.

2007-01-22  Andrew Cagney  <cagney@redhat.com>

	* funit-child.xml: Do not include $pkglibdir@ in synposis.  Use
	explicit @pkglib32dir@ and @pkglib64dir@ in examples.
	* funit-exit.xml: Ditto.
	* funit-threads.xml: Ditto.
	* funit-exec.xml: Ditto.

2007-01-16  Mike Cvet  <mcvet@redhat.com>

	* funit-rt-asmstepper.S: Removed interrupt call.

2007-01-10  Nurdin Premji  <npremji@redhat.com>

	* funit.xml: Added info about new parameter -timeout.

2007-01-09  Andrew Cagney  <cagney@redhat.com>

	* test_main_looper.c: New, copied from frysk/pkgdatadir/.

2007-01-08  Nurdin Premji <npremji@redhat.com>

	* funit.xml: Fixed typo, updated format of -console and -log options.

2007-01-07  Andrew Cagney  <cagney@redhat.com>

	* funit.java: Pass glade and image directories to runTestCases.

2006-12-27  Mike Cvet  <mcvet@redhat.com>

	* funit-rt-asmstepper.S: Fixed loop and removed all instances of 
	non-macro registers.

2006-12-23  Andrew Cagney  <cagney@redhat.com>

	* funit.java: Update, use Config's .getPkgDataDir, getPkgLibDir,
	and getPkgLib32Dir.

2006-12-22  Mike Cvet  <mcvet@redhat.com>

	* funit-asm.h: Added. Fixes #3771.
	* funit-rt-asmstepper.c: Removed architecture-specific code.

2006-12-20  Andrew Cagney  <cagney@redhat.com>

	* funit-rt-asmstepper.S: Add stubs to get PowerPC building.
	* funit-registers.S: Add stub to get 32-bit PowerPC building.
