@@ -1,3 +1,9 @@
+2007-02-02  Andrew Cagney  <cagney@redhat.com>
+
+	* funit-asm.h (SP_REG, BP_REG, REG1, REG2, REG3, REG4, NO_OP) 
+	(ENTER, EXIT, SET, LOAD, STORE, MOVE, ADD, ADDC, SUB, COMPARE) 
+	(JUMP, JUMP_EQ, JUMP_NE, CALL, TRAP): Add definitions.
+
 2007-02-02  Nurdin Premji  <npremji@redhat.com>
 
 	funit-asm.h: Removed spaces after \.
